	function can only be used with unshared objects. This causes a crash
	on CYGWIN. (backported from trunk)
	* generic/tclFileName.c   Don't declare cygwin_conv_to_win32_path here.
	* win/tclWinChan.c        Fix various minor other gcc warnings, like
	* win/tclWinConsole.c     signed<->unsigned mismatch. Backported from
	* win/tclWinDde.c         trunk.
	* win/tclWinNotify.c

2010-05-19 Alexandre Ferrieux  <ferrieux@users.sourceforge.net>

	* generic/tclDictObj.c: Backport of fix for [Bug 3004007], EIAS
	* tests/dict.test:      violation in list-dict conversions.

2010-05-07  Andreas Kupries  <andreask@activestate.com>

	* library/platform/platform.tcl: Fix cpu name for Solaris/Intel 64bit.
	* library/platform/pkgIndex.tcl: Package updated to version 1.0.8.
	* unix/Makefile.in:		
	* win/Makefile.in:

2010-04-30  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclBinary.c (UpdateStringOfByteArray):        Add panic
	when the generated string representation would grow beyond Tcl's
	size limits.  [Bug 2994924]

2010-04-29  Andreas Kupries  <andreask@activestate.com>

	* library/platform/platform.tcl: Another stab at getting the /lib,
	* library/platform/pkgIndex.tcl: /lib64 difference right for
	* unix/Makefile.in: linux. Package updated to version 1.0.7.
	* win/Makefile.in:

2010-04-29  Kevin B. Kenny  <kennykb@acm.org>

	* library/tzdata/Antarctica/Macquarie:
	* library/tzdata/Africa/Casablanca:
	* library/tzdata/Africa/Tunis:
	* library/tzdata/America/Santiago:
	* library/tzdata/America/Argentina/San_Luis:
	* library/tzdata/Antarctica/Casey:
	* library/tzdata/Antarctica/Davis:
	* library/tzdata/Asia/Anadyr:
	* library/tzdata/Asia/Damascus:
	* library/tzdata/Asia/Dhaka:
	* library/tzdata/Asia/Gaza:
	* library/tzdata/Asia/Kamchatka:
	* library/tzdata/Asia/Karachi:
	* library/tzdata/Asia/Taipei:
	* library/tzdata/Europe/Samara:
	* library/tzdata/Pacific/Apia:
	* library/tzdata/Pacific/Easter:
	* library/tzdata/Pacific/Fiji:   Olson's tzdata2010i.
	